Usando redirecionamento do checkout e cadastrando endereço

--- a/views/carrinhoDeCompra.ejs
+++ b/views/carrinhoDeCompra.ejs
@@ -29,7 +29,7 @@
 
                     <div class="produtoSelecionado">
 
-                        <form action="/cartRouter" method="POST">
+                        <form action="/checkout/endereco" method="POST">
                             <ul>
                                 
                             </ul>
