--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -13,25 +13,30 @@
             <a href="#modal" class="btn-login"><img src="/img/login.png" alt="Logar"></a>
         <% } %> 
         
-        <a href="/carrinhoDeCompra"><img src="/img/carrinho.png" alt="Carrinho"></a>
+        <a href="/carrinhoDeCompra" class="icone-botao">
+            <img src="/img/carrinho.png" alt="Carrinho">
+            <span id="icone-carrinho"></span>
+        </a>
     </div>
 </nav>
 <div class="menu-bar">
     <ul>
         <li>
-          <a href="../sobre-nos">A SetupGamer</a>
+          <a href="/sobre-nos">A SetupGamer</a>
         </li>
         <li>
-          <a href="../categorias#pcs-gold">Pc's Gold</a>
+          <a href="/categorias#pcs-gold">Pc's Gold</a>
         </li>
         <li>
-          <a href="../categorias#pcs-bronze">Pc's Bronze</a>
+          <a href="/categorias#pcs-bronze">Pc's Bronze</a>
         </li>
         <li>
-            <a href="../monte-seu-pc">Monte seu pc</a>
+            <a href="/monte-seu-pc">Monte seu pc</a>
         </li>
     </ul>
 </div>
+
+<script src="/scripts/carrinho.js"></script>
 
 <!--modal-->
 <%- include('login') %> 
