correção do banco de dados, rotas e trafego de dados

--- a/views/carrinhoDeCompra.ejs
+++ b/views/carrinhoDeCompra.ejs
@@ -39,8 +39,8 @@
                                 <h3></h3>
                             
                                 <div class="container-concluir">
-                                    <button id='enviar' type="submit">Comprar</button>
-                                    <button id='resetar' onclick="resetarStorage()">Limpar</button>
+                                    <button id='enviar' type="submit" onclick="enviaCarrinho(event)">Comprar</button>
+                                    <button id='resetar' onclick="resetarStorage(event)">Limpar</button>
                                 </div>
                                 
                             </div>
