--- a/views/pagamento.ejs
+++ b/views/pagamento.ejs
@@ -23,12 +23,12 @@
 
         <section class="options">
 
-            <form action="">
+            <form action="/checkout/pagamento" method="post">
 
                 <!--Boleto-->
                 <div class="accordion">
                     <label class="form-control">
-                        <input type="radio" name="radio" />
+                        <input type="radio" name="radio" value="1" />
                         <i class="fas fa-barcode"></i>Boleto bancário
                     </label>
                 </div>
@@ -53,7 +53,7 @@
                 <!--Cartão de Crédito-->
                 <div class="accordion">
                     <label class="form-control">
-                        <input type="radio" name="radio" />
+                        <input type="radio" name="radio" value="2" />
                         <i class="fas fa-credit-card"></i>Cartão de crédito
                     </label>   
                 </div>
@@ -84,7 +84,7 @@
                 <!--Mercado Pago-->
                 <div class="accordion">
                     <label class="form-control">
-                        <input type="radio" name="radio" />
+                        <input type="radio" name="radio" value="3" />
                         <img src="/img/mercado-pago.png" alt="Mercado Pago">Mercado Pago
                     </label>   
                 </div>
@@ -99,7 +99,7 @@
                 <!--PayPal-->
                 <div class="accordion">
                     <label class="form-control">
-                        <input type="radio" name="radio" />
+                        <input type="radio" name="radio" value="4" />
                         <i class="fab fa-paypal"></i>PayPal
                     </label>   
                 </div>
@@ -113,8 +113,9 @@
 
                 <!--Valor total-->
                 <div class="submit-group">
-                    <p>Produto: <small class="valor1">R$ 2.583,17</small></p>
-                    <p>Frete: <small class="valor2">R$ 69,29</small></p>
+                    <p>Produto: <small class="valor1"> <%= totalProdutos %> </small></p>
+                    <p>Frete: <small class="valor2"><%= frete %></small></p>
+                    <p>total: <small class="valor2"><%= totalGeral %></small></p>
 
                     <button type="submit">Confirmar</button>
                 </div>
