corrigido estrutura da controller com as rotas, criado nova view de feedback de compra finalizada

--- a/public/stylesheets/institucional.css
+++ b/public/stylesheets/institucional.css
@@ -18,3 +18,9 @@ h1 {
     border-top: solid 3px #35C910;
     font-size: 1.8vh;
 }
+
+.centralizar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
